ghc/compiler/tests/typecheck/should_fail/tcfail059.hs
--!! The tycon export shouldn't be allowed to succeed
--
module Foo ( Bar(..) ) where { data Bar = Bar X; data X = Y }
